# todo-console-app

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-phase1-console-app/: 001-create-phase1-specification.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-task-breakdown.tasks.prompt.md
history/prompts/constitution/: 001-ratify-evolution-todo-constitution.constitution.prompt.md
specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/checklists/: requirements.md
src/todo_app/: cli.py  main.py  manager.py  models.py
tests/integration/: test_workflows.py
